# DataExtraction_ADA

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
data/: raw_db.sql  silver_db.sql  start.sql
docker/: docker-compose.yml
docs/: index.md
docs/source/: config.md  utils.md
site/: 404.html  index.html
site/source/app/: index.html
source/: .env  .env_db  app.py  config.py  consulta.sql  requirements.txt  utils.py
source/app/: index.html
source/config/: index.html
source/templates/: all_news.html  base.html  index.html  news_by_author.html  news_by_day.html  news_by_id.html  news_by_month.html  news_by_query.html  news_by_source.html  news_by_year.html  source_author.html
source/utils/: index.html
