[tool.poetry]
name = "source"
version = "0.1.0"
description = ""
authors = ["carlos <carducaldeira@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
ipython = "^8.22.2"
psycopg2 = "^2.9.9"
pydantic = "^2.6.4"
pandas = "^2.2.1"
python-dotenv = "^1.0.1"
schedule = "^1.2.1"
flask-wtf = "^1.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^22.1.0"
isort = "^5.13.2"
bandit = "^1.7.6"
pytest-cov = "^4.1.0"
blue = "^0.9.1"
taskipy = "^1.12.2"
click = "8.1.3"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.15"
mkdocstrings = {extras = ["python"], version = "^0.24.1"}
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."

[tool.isort]
profile = "black"
line_length = 79
verbose = true
multi_line_output = 3
include_trailing_comma = true
skip_gitignore = true

[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff ."
bandit = "bandit -r source/ -o bandit_report.txt"
pre_test = "task lint"
test = "pytest -s -x --cov=source -vv"
post_test = "coverage html -d tests/coverage-results/htmlcov"
